--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -57,6 +57,7 @@
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:onClick="selectImage2"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +76,7 @@
         android:gravity="top"
         android:hint="İş hakkında açıklama.."
         android:inputType="textMultiLine"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewIsEkle"
@@ -100,6 +102,7 @@
         android:layout_marginTop="5dp"
         android:text="İş Ekle"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/commentText" />
