--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -40,7 +40,7 @@
 
         <TextView
             android:id="@+id/recyclerviewRowCommentText"
-            android:layout_width="wrap_content"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="TextView"
